@@ -18,20 +18,18 @@ package org.apache.solr.cloud;
 
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.InputStream;
 import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.io.filefilter.RegexFileFilter;
 import org.apache.commons.io.filefilter.TrueFileFilter;
-import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.ClusterProperties;
@@ -39,6 +37,7 @@ import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.VMParamsAllAndReadonlyDigestZkACLProvider;
 import org.apache.solr.common.cloud.ZkNodeProps;
 import org.apache.solr.common.cloud.ZkStateReader;
+import org.apache.solr.common.util.ZLibCompressor;
 import org.apache.solr.core.ConfigSetService;
 import org.apache.solr.util.ExternalPaths;
 import org.apache.zookeeper.CreateMode;
@@ -62,6 +61,8 @@ public class ZkCLITest extends SolrTestCaseJ4 {
 
   private SolrZkClient zkClient;
 
+  private PrintStream originalSystemOut;
+
   protected static final String SOLR_HOME = SolrTestCaseJ4.TEST_HOME();
 
   @BeforeClass
@@ -81,21 +82,31 @@ public class ZkCLITest extends SolrTestCaseJ4 {
       log.info("####SETUP_START {}", getTestName());
     }
 
-    String exampleHome = SolrJettyTestBase.legacyExampleCollection1SolrHome();
+    String exampleHome = legacyExampleCollection1SolrHome();
 
     Path tmpDir = createTempDir();
     solrHome = exampleHome;
+
+    originalSystemOut = System.out;
 
     zkDir = tmpDir.resolve("zookeeper/server1/data");
     log.info("ZooKeeper dataDir:{}", zkDir);
     zkServer = new ZkTestServer(zkDir);
     zkServer.run();
     System.setProperty("zkHost", zkServer.getZkAddress());
-    SolrZkClient zkClient = new SolrZkClient(zkServer.getZkHost(), AbstractZkTestCase.TIMEOUT);
+    SolrZkClient zkClient =
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkHost())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build();
     zkClient.makePath("/solr", false, true);
     zkClient.close();
 
-    this.zkClient = new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT);
+    this.zkClient =
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build();
 
     if (log.isInfoEnabled()) {
       log.info("####SETUP_END {}", getTestName());
@@ -162,6 +173,36 @@ public class ZkCLITest extends SolrTestCaseJ4 {
   }
 
   @Test
+  public void testPutCompressed() throws Exception {
+    // test put compressed
+    System.setProperty("solr.home", solrHome);
+    System.setProperty("minStateByteLenForCompression", "0");
+
+    String data = "my data";
+    ZLibCompressor zLibCompressor = new ZLibCompressor();
+    byte[] dataBytes = data.getBytes(StandardCharsets.UTF_8);
+    byte[] expected =
+        random().nextBoolean()
+            ? zLibCompressor.compressBytes(dataBytes)
+            : zLibCompressor.compressBytes(dataBytes, dataBytes.length / 10);
+    String[] args =
+        new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "put", "/state.json", data};
+    ZkCLI.main(args);
+    assertArrayEquals(zkClient.getZooKeeper().getData("/state.json", null, null), expected);
+
+    // test re-put to existing
+    data = "my data deux";
+    dataBytes = data.getBytes(StandardCharsets.UTF_8);
+    expected =
+        random().nextBoolean()
+            ? zLibCompressor.compressBytes(dataBytes)
+            : zLibCompressor.compressBytes(dataBytes, dataBytes.length / 10);
+    args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "put", "/state.json", data};
+    ZkCLI.main(args);
+    assertArrayEquals(zkClient.getZooKeeper().getData("/state.json", null, null), expected);
+  }
+
+  @Test
   public void testPutFile() throws Exception {
     // test put file
     String[] args =
@@ -170,22 +211,39 @@ public class ZkCLITest extends SolrTestCaseJ4 {
           zkServer.getZkAddress(),
           "-cmd",
           "putfile",
-          "/solr.xml",
+          "/foo.xml",
           SOLR_HOME + File.separator + "solr-stress-new.xml"
         };
     ZkCLI.main(args);
 
     String fromZk =
-        new String(zkClient.getData("/solr.xml", null, null, true), StandardCharsets.UTF_8);
-    File locFile = new File(SOLR_HOME + File.separator + "solr-stress-new.xml");
-    InputStream is = new FileInputStream(locFile);
-    String fromLoc;
-    try {
-      fromLoc = new String(IOUtils.toByteArray(is), StandardCharsets.UTF_8);
-    } finally {
-      IOUtils.closeQuietly(is);
-    }
+        new String(zkClient.getData("/foo.xml", null, null, true), StandardCharsets.UTF_8);
+    Path locFile = Path.of(SOLR_HOME, "solr-stress-new.xml");
+    String fromLoc = Files.readString(locFile);
     assertEquals("Should get back what we put in ZK", fromZk, fromLoc);
+  }
+
+  @Test
+  public void testPutFileCompressed() throws Exception {
+    // test put file compressed
+    System.setProperty("solr.home", solrHome);
+    System.setProperty("minStateByteLenForCompression", "0");
+
+    String[] args =
+        new String[] {
+          "-zkhost",
+          zkServer.getZkAddress(),
+          "-cmd",
+          "putfile",
+          "/state.json",
+          SOLR_HOME + File.separator + "solr-stress-new.xml"
+        };
+    ZkCLI.main(args);
+
+    byte[] fromZk = zkClient.getZooKeeper().getData("/state.json", null, null);
+    Path locFile = Path.of(SOLR_HOME, "solr-stress-new.xml");
+    byte[] fromLoc = new ZLibCompressor().compressBytes(Files.readAllBytes(locFile));
+    assertArrayEquals("Should get back what we put in ZK", fromLoc, fromZk);
   }
 
   @Test
@@ -197,13 +255,13 @@ public class ZkCLITest extends SolrTestCaseJ4 {
           zkServer.getZkAddress(),
           "-cmd",
           "putfile",
-          "/solr.xml",
+          "/foo.xml",
           SOLR_HOME + File.separator + "not-there.xml"
         };
-    FileNotFoundException e = expectThrows(FileNotFoundException.class, () -> ZkCLI.main(args));
+    NoSuchFileException e = expectThrows(NoSuchFileException.class, () -> ZkCLI.main(args));
     assertTrue(
         "Didn't find expected error message containing 'not-there.xml' in " + e.getMessage(),
-        e.getMessage().indexOf("not-there.xml") != -1);
+        e.getMessage().contains("not-there.xml"));
   }
 
   @Test
@@ -212,12 +270,12 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     String[] args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "list"};
 
     ByteArrayOutputStream byteStream = new ByteArrayOutputStream();
-    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8.name());
+    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8);
     ZkCLI.setStdout(myOut);
 
     ZkCLI.main(args);
 
-    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8.name());
+    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8);
     String separator = System.lineSeparator();
     assertEquals("/ (1)" + separator + " /test (0)" + separator + separator, standardOutput);
   }
@@ -228,12 +286,12 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     String[] args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "ls", "/test"};
 
     ByteArrayOutputStream byteStream = new ByteArrayOutputStream();
-    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8.name());
+    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8);
     ZkCLI.setStdout(myOut);
 
     ZkCLI.main(args);
 
-    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8.name());
+    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8);
     String separator = System.lineSeparator();
     assertEquals(
         "/test (1)" + separator + " /test/path (0)" + separator + separator, standardOutput);
@@ -370,29 +428,95 @@ public class ZkCLITest extends SolrTestCaseJ4 {
   public void testGet() throws Exception {
     String getNode = "/getNode";
     byte[] data = "getNode-data".getBytes(StandardCharsets.UTF_8);
+    ByteArrayOutputStream systemOut = new ByteArrayOutputStream();
     this.zkClient.create(getNode, data, CreateMode.PERSISTENT, true);
     String[] args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "get", getNode};
+    ZkCLI.setStdout(new PrintStream(systemOut, true, StandardCharsets.UTF_8));
     ZkCLI.main(args);
+    assertArrayEquals(
+        data,
+        systemOut
+            .toString(StandardCharsets.UTF_8)
+            .replace(System.lineSeparator(), "")
+            .getBytes(StandardCharsets.UTF_8));
+  }
+
+  @Test
+  public void testGetCompressed() throws Exception {
+    System.setProperty("solr.home", solrHome);
+    System.setProperty("minStateByteLenForCompression", "0");
+
+    String getNode = "/getNode";
+    byte[] data = "getNode-data".getBytes(StandardCharsets.UTF_8);
+    ZLibCompressor zLibCompressor = new ZLibCompressor();
+    ByteArrayOutputStream systemOut = new ByteArrayOutputStream();
+    byte[] compressedData =
+        random().nextBoolean()
+            ? zLibCompressor.compressBytes(data)
+            : zLibCompressor.compressBytes(data, data.length / 10);
+    this.zkClient.create(getNode, compressedData, CreateMode.PERSISTENT, true);
+    String[] args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "get", getNode};
+    ZkCLI.setStdout(new PrintStream(systemOut, true, StandardCharsets.UTF_8));
+    ZkCLI.main(args);
+    assertArrayEquals(
+        data,
+        systemOut
+            .toString(StandardCharsets.UTF_8)
+            .replace(System.lineSeparator(), "")
+            .getBytes(StandardCharsets.UTF_8));
   }
 
   @Test
   public void testGetFile() throws Exception {
-    File tmpDir = createTempDir().toFile();
+    Path tmpDir = createTempDir();
 
     String getNode = "/getFileNode";
     byte[] data = "getFileNode-data".getBytes(StandardCharsets.UTF_8);
     this.zkClient.create(getNode, data, CreateMode.PERSISTENT, true);
 
-    File file =
-        new File(tmpDir, "solrtest-getfile-" + this.getClass().getName() + "-" + System.nanoTime());
+    Path file =
+        tmpDir.resolve("solrtest-getfile-" + this.getClass().getName() + "-" + System.nanoTime());
     String[] args =
         new String[] {
-          "-zkhost", zkServer.getZkAddress(), "-cmd", "getfile", getNode, file.getAbsolutePath()
+          "-zkhost",
+          zkServer.getZkAddress(),
+          "-cmd",
+          "getfile",
+          getNode,
+          file.toAbsolutePath().toString()
         };
     ZkCLI.main(args);
 
-    byte[] readData = FileUtils.readFileToByteArray(file);
-    assertArrayEquals(data, readData);
+    assertArrayEquals(data, Files.readAllBytes(file));
+  }
+
+  @Test
+  public void testGetFileCompressed() throws Exception {
+    Path tmpDir = createTempDir();
+
+    String getNode = "/getFileNode";
+    byte[] data = "getFileNode-data".getBytes(StandardCharsets.UTF_8);
+    ZLibCompressor zLibCompressor = new ZLibCompressor();
+    byte[] compressedData =
+        random().nextBoolean()
+            ? zLibCompressor.compressBytes(data)
+            : zLibCompressor.compressBytes(data, data.length / 10);
+    this.zkClient.create(getNode, compressedData, CreateMode.PERSISTENT, true);
+
+    Path file =
+        tmpDir.resolve("solrtest-getfile-" + this.getClass().getName() + "-" + System.nanoTime());
+    String[] args =
+        new String[] {
+          "-zkhost",
+          zkServer.getZkAddress(),
+          "-cmd",
+          "getfile",
+          getNode,
+          file.toAbsolutePath().toString()
+        };
+    ZkCLI.main(args);
+
+    assertArrayEquals(data, Files.readAllBytes(file));
   }
 
   @Test
@@ -412,9 +536,11 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     SolrException ex =
         expectThrows(
             SolrException.class,
-            () -> {
-              new SolrZkClient("----------:33332", 100);
-            });
+            () ->
+                new SolrZkClient.Builder()
+                    .withUrl("----------:33332")
+                    .withTimeout(100, TimeUnit.MILLISECONDS)
+                    .build());
     zkClient.close();
   }
 
@@ -471,8 +597,11 @@ public class ZkCLITest extends SolrTestCaseJ4 {
 
     boolean excepted = false;
     try (SolrZkClient zkClient =
-        new SolrZkClient(
-            zkServer.getZkAddress(), AbstractDistribZkTestBase.DEFAULT_CONNECTION_TIMEOUT)) {
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(
+                AbstractDistribZkTestBase.DEFAULT_CONNECTION_TIMEOUT, TimeUnit.MILLISECONDS)
+            .build()) {
       zkClient.getData("/", null, null, true);
     } catch (KeeperException.NoAuthException e) {
       excepted = true;
@@ -488,6 +617,9 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     if (zkServer != null) {
       zkServer.shutdown();
     }
+    System.clearProperty("solr.home");
+    System.clearProperty("minStateByteLenForCompression");
+    System.setOut(originalSystemOut);
     super.tearDown();
   }
 }
