@@ -27,11 +27,10 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
+import java.util.concurrent.TimeUnit;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.cloud.DigestZkACLProvider;
 import org.apache.solr.common.cloud.DigestZkCredentialsProvider;
@@ -57,8 +56,6 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
   private static final String ALL_PASSWORD = "connectAndAllACLPassword";
   private static final String READONLY_USERNAME = "readonlyACLUsername";
   private static final String READONLY_PASSWORD = "readonlyACLPassword";
-
-  public static final String SECRET_NAME = "zkCredentialsSecret";
 
   protected ZkTestServer zkServer;
 
@@ -99,13 +96,20 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
         AllAndReadonlyCredentialZkCredentialsInjector.class.getName());
 
     SolrZkClient zkClient =
-        new SolrZkClient(
-            zkServer.getZkHost(), AbstractZkTestCase.TIMEOUT, AbstractZkTestCase.TIMEOUT);
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkHost())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .withConnTimeOut(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build();
 
     zkClient.makePath("/solr", false, true);
     zkClient.close();
 
-    zkClient = new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT);
+    zkClient =
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build();
     zkClient.create(
         "/protectedCreateNode", "content".getBytes(DATA_ENCODING), CreateMode.PERSISTENT, false);
     zkClient.makePath(
@@ -120,7 +124,11 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
 
     clearSecuritySystemProperties();
 
-    zkClient = new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT);
+    zkClient =
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build();
     // Currently, no credentials on ZK connection, because those same VM-params are used for adding
     // ACLs, and here we want
     // no (or completely open) ACLs added. Therefore, hack your way into being authorized for
@@ -164,12 +172,9 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
   @Test
   public void testNoCredentials() throws Exception {
     List<TestZkCredentialsInjector> testZkCredentialsInjectors =
-        new ArrayList<>() {
-          {
-            add(new TestZkCredentialsInjector(NoCredentialZkCredentialsInjector.class));
-            add(new TestZkCredentialsInjector(VMParamsZkCredentialsInjector.class));
-          }
-        };
+        List.of(
+            new TestZkCredentialsInjector(NoCredentialZkCredentialsInjector.class),
+            new TestZkCredentialsInjector(VMParamsZkCredentialsInjector.class));
 
     testInjectors(
         testZkCredentialsInjectors,
@@ -188,18 +193,13 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
   @Test
   public void testWrongCredentials() throws Exception {
     List<TestZkCredentialsInjector> testZkCredentialsInjectors =
-        new ArrayList<>() {
-          {
-            add(new TestZkCredentialsInjector(WrongAllCredentialZkCredentialsInjector.class));
-            add(
-                new TestZkCredentialsInjector(
-                    VMParamsZkCredentialsInjector.class,
-                    Arrays.asList(
-                        DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME,
-                        DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME),
-                    Arrays.asList(ALL_USERNAME, ALL_PASSWORD + "Wrong")));
-          }
-        };
+        List.of(
+            new TestZkCredentialsInjector(WrongAllCredentialZkCredentialsInjector.class),
+            new TestZkCredentialsInjector(
+                VMParamsZkCredentialsInjector.class,
+                List.of(
+                    DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME, DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME),
+                List.of(ALL_USERNAME, ALL_PASSWORD + "Wrong")));
 
     testInjectors(
         testZkCredentialsInjectors,
@@ -218,18 +218,13 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
   @Test
   public void testAllCredentials() throws Exception {
     List<TestZkCredentialsInjector> testZkCredentialsInjectors =
-        new ArrayList<>() {
-          {
-            add(new TestZkCredentialsInjector(AllCredentialZkCredentialsInjector.class));
-            add(
-                new TestZkCredentialsInjector(
-                    VMParamsZkCredentialsInjector.class,
-                    Arrays.asList(
-                        DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME,
-                        DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME),
-                    Arrays.asList(ALL_USERNAME, ALL_PASSWORD)));
-          }
-        };
+        List.of(
+            new TestZkCredentialsInjector(AllCredentialZkCredentialsInjector.class),
+            new TestZkCredentialsInjector(
+                VMParamsZkCredentialsInjector.class,
+                List.of(
+                    DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME, DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME),
+                List.of(ALL_USERNAME, ALL_PASSWORD)));
 
     testInjectors(
         testZkCredentialsInjectors, true, true, true, true, true, true, true, true, true, true);
@@ -238,18 +233,13 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
   @Test
   public void testReadonlyCredentials() throws Exception {
     List<TestZkCredentialsInjector> testZkCredentialsInjectors =
-        new ArrayList<>() {
-          {
-            add(new TestZkCredentialsInjector(ConnectWithReadonlyCredsInjector.class));
-            add(
-                new TestZkCredentialsInjector(
-                    VMParamsZkCredentialsInjector.class,
-                    Arrays.asList(
-                        DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME,
-                        DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME),
-                    Arrays.asList(READONLY_USERNAME, READONLY_PASSWORD)));
-          }
-        };
+        List.of(
+            new TestZkCredentialsInjector(ConnectWithReadonlyCredsInjector.class),
+            new TestZkCredentialsInjector(
+                VMParamsZkCredentialsInjector.class,
+                List.of(
+                    DEFAULT_DIGEST_USERNAME_VM_PARAM_NAME, DEFAULT_DIGEST_PASSWORD_VM_PARAM_NAME),
+                List.of(READONLY_USERNAME, READONLY_PASSWORD)));
     testInjectors(
         testZkCredentialsInjectors,
         true,
@@ -282,7 +272,10 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
       setUp();
       testZkCredentialsInjector.setSystemProps();
       try (SolrZkClient zkClient =
-          new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT)) {
+          new SolrZkClient.Builder()
+              .withUrl(zkServer.getZkAddress())
+              .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+              .build()) {
         doTest(
             zkClient,
             getData,
@@ -303,7 +296,10 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
   public void testRepairACL() throws Exception {
     clearSecuritySystemProperties();
     try (SolrZkClient zkClient =
-        new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT)) {
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build()) {
       // Currently, no credentials on ZK connection, because those same VM-params are used for
       // adding ACLs, and here we want
       // no (or completely open) ACLs added. Therefore, hack your way into being authorized for
@@ -322,7 +318,10 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
 
     setSecuritySystemProperties();
     try (SolrZkClient zkClient =
-        new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT)) {
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build()) {
       ZkController.createClusterZkNodes(zkClient);
       assertNotEquals(OPEN_ACL_UNSAFE, zkClient.getACL("/security.json", null, false));
     }
@@ -330,7 +329,10 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
     useZkCredentialsInjector(ConnectWithReadonlyCredsInjector.class);
     // useReadonlyCredentials();
     try (SolrZkClient zkClient =
-        new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT)) {
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build()) {
       NoAuthException e =
           assertThrows(
               NoAuthException.class, () -> zkClient.getData("/security.json", null, null, false));
@@ -439,7 +441,10 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
     useVMParamsAllCredentialsFromFile();
 
     try (SolrZkClient zkClient =
-        new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT)) {
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build()) {
       doTest(zkClient, true, true, true, true, true, true, true, true, true, true);
     }
   }
@@ -449,7 +454,10 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
     useVMParamsReadonlyCredentialsFromFile();
 
     try (SolrZkClient zkClient =
-        new SolrZkClient(zkServer.getZkAddress(), AbstractZkTestCase.TIMEOUT)) {
+        new SolrZkClient.Builder()
+            .withUrl(zkServer.getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .build()) {
       doTest(zkClient, true, true, false, false, false, false, false, false, false, false);
     }
   }
@@ -493,46 +501,32 @@ public class AbstractDigestZkACLAndCredentialsProvidersTestBase extends SolrTest
       implements ZkCredentialsInjector {
     @Override
     public List<ZkCredential> getZkCredentials() {
-      return new ArrayList<>() {
-        {
-          add(new ZkCredential(ALL_USERNAME, ALL_PASSWORD, ZkCredential.Perms.ALL));
-          add(new ZkCredential(READONLY_USERNAME, READONLY_PASSWORD, ZkCredential.Perms.READ));
-        }
-      };
+      return List.of(
+          new ZkCredential(ALL_USERNAME, ALL_PASSWORD, ZkCredential.Perms.ALL),
+          new ZkCredential(READONLY_USERNAME, READONLY_PASSWORD, ZkCredential.Perms.READ));
     }
   }
 
   public static class ConnectWithReadonlyCredsInjector implements ZkCredentialsInjector {
     @Override
     public List<ZkCredential> getZkCredentials() {
-      return new ArrayList<>() {
-        {
-          // uses readonly creds to connect to zookeeper, hence "all"
-          add(new ZkCredential(READONLY_USERNAME, READONLY_PASSWORD, ZkCredential.Perms.ALL));
-        }
-      };
+      return List.of(
+          new ZkCredential(READONLY_USERNAME, READONLY_PASSWORD, ZkCredential.Perms.ALL));
     }
   }
 
   public static class AllCredentialZkCredentialsInjector implements ZkCredentialsInjector {
     @Override
     public List<ZkCredential> getZkCredentials() {
-      return new ArrayList<>() {
-        {
-          add(new ZkCredential(ALL_USERNAME, ALL_PASSWORD, ZkCredential.Perms.ALL));
-        }
-      };
+      return List.of(new ZkCredential(ALL_USERNAME, ALL_PASSWORD, ZkCredential.Perms.ALL));
     }
   }
 
   public static class WrongAllCredentialZkCredentialsInjector implements ZkCredentialsInjector {
     @Override
     public List<ZkCredential> getZkCredentials() {
-      return new ArrayList<>() {
-        {
-          add(new ZkCredential(ALL_USERNAME, ALL_PASSWORD + "Wrong", ZkCredential.Perms.ALL));
-        }
-      };
+      return List.of(
+          new ZkCredential(ALL_USERNAME, ALL_PASSWORD + "Wrong", ZkCredential.Perms.ALL));
     }
   }
 
